@@ -103,6 +103,8 @@ CHANGES IN FLTK 1.3.4					RELEASED: ??? ?? 2016
 
 	Bug fixes
 
+	- Fix potential crash when using keyboard navigation on an Fl_Tabs
+	  widget w/o children (STR #3333).
 	- Fix potential crash if Fl_Window::icon(NULL) was called to clear
 	  (reset) a window icon. This is now legal and documented behavior.
 	  The same applies to Fl_Window::default_icon().
